# SmartContract-Auditor-Agent

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_TO_MOONSCAPE.md  MOONSCAPE_INTEGRATION_GUIDE.md  NETWORK_ISSUE_SOLUTION.md  PRESENTATION_PROMPT.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  create_hcs_topic.py  debug_hcs10_integration.py  deploy_to_moonscape.bat  deploy_to_moonscape.sh  hcs10_demo.py  moonscape_integration.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  setup-frontend.bat  setup-frontend.sh  start_backend.bat  start_backend.py  start_moonscape_integration.py  start_moonscape_services.bat  test_api.py  test_api_direct.py  test_contract.sol  test_frontend_integration.py  test_moonscape_integration.py  test_raw_response.py  test_slither_direct.py  vercel.json
backend/: =0.11.0  README.md  check_env.py  check_env_with_dotenv.py  debug_api.py  debug_hcs10.py  debug_subprocess.py  run_specific_test.py  run_tests_with_env.py  setup.py  test_basic.py  test_logo.py  test_simple_slither.py  test_slither_fix.py
backend/docs/: HederaAuditAI_PRD.ipynb
backend/src/: __init__.py
config/: .env.example
docs/: PRODUCTION_DEPLOYMENT.md  README.md  hashgraphHSC10.md  logo_instructions.md  moonscape.md  research.md
frontend/: .env.local.example  .eslintignore  .eslintrc.json  .prettierignore  README.md  STRICT_TYPING_GUIDE.md  lint-rules-demo.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: __init__.py
tests/: conftest.py  test_structure.py
(+85 files in other folders)
