[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_contract_auditor_agent"
version = "0.2.0"
description = "AI-powered auditing tool for Hedera smart contracts with HCS-10 OpenConvAI support"
readme = "README.md"
authors = [
    {name = "Hedera Audit AI Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[tool.virtualenv]
packages = "find_namespace:"
venv-prompt = "hedera-audit-ai"
python = "3.12"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_freezegun.*",
]
